# DAM1

M2/UF1/teoria/: glosario.rst  teoria.rst
M2/UF1/teoria/ejemplos/: ej1.raw
M2/UF1/teoria/plantuml/: ejemploAtributo.plantuml  ejemploEntidad.plantuml
M7/UF1/: teoria.rst
M7/UF1/ejercicios/: PrimeraInterfaz.glade  README.txt  diagramaFlujo.plantuml  ex1.html  ex1.rst  ex1_ManualAvanzado.rst  ex1_ManualUsuari.rst  test.py
M7/UF1/ejercicios/practica2/: .anjuta_sym_db.db  Makefile.in  configure  configure.ac
M7/UF1/ejercicios/practica2/.anjuta/session/: anjuta.session  dock-layout.xml
M7/UF1/ejercicios/practica2/Debug/: Makefile  config.h  config.status  libtool
M7/UF1/ejercicios/practica2/Debug/po/: Makefile  Makefile.in  POTFILES
M7/UF1/ejercicios/practica2/Debug/src/: Makefile  practica2
M7/UF1/ejercicios/practica2/Debug/src/.deps/: main.Po
M7/UF1/ejercicios/practica2/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
M7/UF1/ejercicios/practica2/src/: Makefile.am  Makefile.in  main.c  main.c~  practica2.ui
M7/UF1/ejercicios/tanda1/entrega/exercici1/: .anjuta_sym_db.db  exercici1.ui
M7/UF1/ejercicios/tanda1/entrega/exercici2/: .anjuta_sym_db.db  main.c
M7/UF1/ejercicios/tanda1/entrega/exercici3/: exercici3.ui  main.c
M7/UF1/ejercicios/tanda1/entrega/exercici4/: .anjuta_sym_db.db  exercici4.ui  main.c
M7/UF1/ejercicios/tanda1/entrega/exercici5/: .anjuta_sym_db.db  exercici5.ui
M7/UF1/ejercicios/tanda1/entrega/exercici6/: main.c
M7/UF1/ejercicios/tanda1/entrega/exercici7/: .anjuta_sym_db.db  main.c
M7/UF1/ejercicios/tanda1/exercici1/: Makefile.in  configure  configure.ac
M7/UF1/ejercicios/tanda1/exercici1/Debug/: Makefile  config.h  config.status  libtool
M7/UF1/ejercicios/tanda1/exercici1/Debug/po/: Makefile  Makefile.in  POTFILES
M7/UF1/ejercicios/tanda1/exercici1/Debug/src/: Makefile  exercici1
M7/UF1/ejercicios/tanda1/exercici1/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
M7/UF1/ejercicios/tanda1/exercici1/src/: Makefile.am  Makefile.in  main.c  main.c~
M7/UF1/ejercicios/tanda1/exercici2/: .anjuta_sym_db.db  Makefile.in  configure  configure.ac
M7/UF1/ejercicios/tanda1/exercici2/.anjuta/session/: anjuta.session  dock-layout.xml
M7/UF1/ejercicios/tanda1/exercici2/Debug/: Makefile  config.h  config.status  libtool
M7/UF1/ejercicios/tanda1/exercici2/Debug/po/: Makefile  Makefile.in  POTFILES
M7/UF1/ejercicios/tanda1/exercici2/Debug/src/: Makefile  exercici2
M7/UF1/ejercicios/tanda1/exercici2/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
M7/UF1/ejercicios/tanda1/exercici2/src/: Makefile.am  Makefile.in  exercici2.ui  main.c~
M7/UF1/ejercicios/tanda1/exercici3/: .anjuta_sym_db.db  Makefile.in  configure  configure.ac
M7/UF1/ejercicios/tanda1/exercici3/Debug/: Makefile  config.h  config.status  libtool
M7/UF1/ejercicios/tanda1/exercici3/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
M7/UF1/ejercicios/tanda1/exercici3/src/: Makefile.am  Makefile.in  main.c~
M7/UF1/ejercicios/tanda1/exercici4/: .anjuta_sym_db.db  Makefile.in  configure  configure.ac
M7/UF1/ejercicios/tanda1/exercici4/Debug/: Makefile  config.h  config.status  libtool
M7/UF1/ejercicios/tanda1/exercici4/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
M7/UF1/ejercicios/tanda1/exercici4/src/: Makefile.am  Makefile.in  exercici4.ui  main.c  main.c~
M7/UF1/ejercicios/tanda1/exercici5/: .anjuta_sym_db.db  Makefile.in  configure  configure.ac
M7/UF1/ejercicios/tanda1/exercici5/Debug/: Makefile  config.h  config.status  libtool
M7/UF1/ejercicios/tanda1/exercici5/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
M7/UF1/ejercicios/tanda1/exercici5/src/: Makefile.am  Makefile.in  main.c  main.c~
M7/UF1/ejercicios/tanda1/exercici6/: .anjuta_sym_db.db  Makefile.in  configure  configure.ac
M7/UF1/ejercicios/tanda1/exercici6/Debug/: Makefile  config.h  config.status  libtool
M7/UF1/ejercicios/tanda1/exercici6/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
M7/UF1/ejercicios/tanda1/exercici6/src/: Makefile.am  Makefile.in  exercici6.ui  main.c~
M7/UF1/ejercicios/tanda1/exercici7/: Makefile.in  aclocal.m4  configure  configure.ac
M7/UF1/ejercicios/tanda1/exercici7/Debug/: Makefile  config.h  config.status  libtool
M7/UF1/ejercicios/tanda1/exercici7/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
M7/UF1/ejercicios/tanda1/exercici7/src/: Makefile.am  Makefile.in  exercici7.ui  main.c~
(+50 files in other folders)
